--- a/templates/getSequence.html.twig
+++ b/templates/getSequence.html.twig
@@ -13,32 +13,30 @@
                         <div class="card-body card-block">
 
                             <form action="reserve_sequence" method="post" class="">
-                                <div class="form-group">
+                                <div class="form-group col-lg-6">
                                     <div class="input-group">
-
-                                        <button type="button"  href="{{ path('generate_sequence') }}" id="generate_sequence_btn" class="btn btn-success btn-sm fa fa-cog"> Génerer </button>
                                         <input type="text" id="sequence" name="sequence" placeholder="Sequence"
                                                class="form-control" readonly value="">
+                                        <button type="button" href="{{ path('generate_sequence') }}"
+                                                id="generate_sequence_btn" class="btn btn-success btn-sm fa fa-cog">
+                                            Génerer
+                                        </button>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <div class="input-group-addon">Demandeur <i class="fa fa-user"></i></div>
-                                        <input type="text" id="_username" name="_username"
-                                               class="form-control" readonly value="{{ app.user.username }}">
-                                    </div>
+                                <div class="form-group col-lg-6">
+                                    <label for="_username" class="control-label mb-1">Demandeur</label>
+                                    <input id="_username" name="_username" class="form-control"
+                                           value="{{ app.user.username }}" type="text" readonly>
                                 </div>
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <div class="input-group-addon">Agence <i class="fa fa-building"></i></div>
-                                        <input type="text" id="agency" name="agency"
-                                               class="form-control" readonly value="{{ app.user.agency }}">
-                                    </div>
+                                <div class="form-group col-lg-6">
+                                    <label for="_username" class="control-label mb-1">Agence</label>
+                                    <input type="text" id="agency" name="agency"
+                                           class="form-control" readonly value="{{ app.user.agency }}">
                                 </div>
-{#
-                                <div class="form-actions form-group">
-                                    <button type="submit" onclick="return " class="btn btn-success btn-sm">Reserver</button>
-                                </div>#}
+                                {#
+                                                                <div class="form-actions form-group">
+                                                                    <button type="submit" onclick="return " class="btn btn-success btn-sm">Reserver</button>
+                                                                </div>#}
                             </form>
                         </div>
                     </div>
