--- a/templates/user/newUser.html.twig
+++ b/templates/user/newUser.html.twig
@@ -6,9 +6,20 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="card">
-                        <div class="card-header">Example Form</div>
+                        <div class="card-header">Nouveau utilisateur</div>
                         <div class="card-body card-block">
-                            <form action="#" method="post" class="">
+
+                            <form action="add_user" method="post" class="">
+                                <div class="form-group col-lg-6">
+                                    <label for="exampleFormControlSelect1">Agence</label>
+                                    <select class="form-control" id="agency" name="agency">
+                                        <option>Agence 1</option>
+                                        <option>Agence 2</option>
+                                        <option>Agence 3</option>
+                                        <option>Agence 4</option>
+                                        <option>Agence 5</option>
+                                    </select>
+                                </div>
                                 <div class="form-group col-md-6">
                                     <div class="input-group">
                                         <div class="input-group-addon"><i class="fa fa-user"></i></div>
@@ -37,41 +48,9 @@
                                                type="password">
                                     </div>
                                 </div>
-                                <div class="form-group col-md-6">
-                                    <div class="input-group">
-                                        <div class="input-group-addon"><i class="fa fa-asterisk"></i></div>
 
-                                    </div>
-                                </div>
-                                <div class="form-actions form-group">
-                                    <button type="submit" class="btn btn-success btn-sm">Submit</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
 
-                    <div class="card">
-                        <div class="card-header">Nouveau utilisateur</div>
-                        <div class="card-body card-block">
-
-                            <form action="add_user" method="post" class="">
-                                <div class="form-group col-lg-6">
-                                    <div class="input-group">
-                                        <input type="text" id="sequence" name="sequence" placeholder="Sequence"
-                                               class="form-control" readonly value="">
-                                    </div>
-                                </div>
-                                <div class="form-group col-lg-6">
-                                    <label for="_username" class="control-label mb-1">Demandeur</label>
-                                    <input id="_username" name="_username" class="form-control"
-                                           value="{{ app.user.username }}" type="text" readonly>
-                                </div>
-                                <div class="form-group col-lg-6">
-                                    <label for="_username" class="control-label mb-1">Agence</label>
-                                    <input type="text" id="agency" name="agency"
-                                           class="form-control" readonly value="{{ app.user.agency }}">
-                                </div>
-                                <div class="form-actions form-group">
+                                <div class="form-actions form-group col-md-6">
                                     <button type="submit" class="btn btn-success btn-sm">Créer</button>
                                 </div>
                             </form>
