--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -2,14 +2,33 @@
 
 {% block content %}
     <div class="content pb-0">
-        <div class="animated fadeIn">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="card">
-                        <div class="card-header">Nouveau utilisateur</div>
-                        <div class="card-body card-block">
 
-                            <form action="add_user" method="post" class="">
+
+        <div class="clearfix"></div>
+        <div class="orders">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="box-title">{{ title }} </h4>
+                        </div>
+                        <div class="card-body card-block">
+                            {{ form_start(formUser) }}
+                            {#{{ form_widget(formUser) }}#}
+                            {{ form_row(formUser.agency, {'attr': {'required':true, 'class':'form-control col-lg-6'}}) }}
+                            {{ form_row(formUser.username, {'attr': {'placeholder':"Username",'required':true, 'class':'form-control col-lg-6'}}) }}
+                            {{ form_row(formUser.email, {'attr': {'placeholder':"Email",'required':true, 'class':'form-control col-lg-6'}}) }}
+                            {{ form_row(formUser.password, {'attr': {'placeholder':"Password",'required':true, 'class':'form-control col-lg-6'}}) }}
+                            {% if editMode %}
+                            {{ form_row(formUser.save, {'label': 'Sauvegarder', 'attr': {'class' : 'btn btn-success btn-sm mt-3'}}) }}
+                            {% else %}
+                            {{ form_row(formUser.save, {'label': 'Créer', 'attr': {'class' : 'btn btn-success btn-sm mt-3'}}) }}
+                            {% endif %}
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                            {{ form_end(formUser) }}
+                            {#
+                            A static form
+                            <form action="{{ path('add_user') }}" method="post" class="">
                                 <div class="form-group col-lg-6">
                                     <label for="exampleFormControlSelect1">Agence</label>
                                     <select class="form-control" id="agency" name="agency">
@@ -53,7 +72,7 @@
                                 <div class="form-actions form-group col-md-6">
                                     <button type="submit" class="btn btn-success btn-sm">Créer</button>
                                 </div>
-                            </form>
+                            </form>#}
                         </div>
                     </div>
                 </div>
