--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -21,6 +21,7 @@
                                         <th>Agence</th>
                                         <th>Nom / Prénom</th>
                                         <th>Email</th>
+                                        <th>Actions</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -30,6 +31,15 @@
                                             <td>{{ u.agency }}</td>
                                             <td><span class="name">{{ u.username }}</span></td>
                                             <td><span class="product">{{ u.email }}</span></td>
+                                            <td>
+                                                <span class="product">
+                                                    <div class="btn-group" role="group" aria-label="Actions">
+                                                        <a href="{{ path('edit_user', {'id':u.id}) }}" type="button" class="btn btn-sm btn-success">Editer</a>
+                                                        <a href="#" type="button" class="btn btn-sm btn-success">Activer</a>
+                                                        <a href="#" type="button" class="btn btn-sm btn-danger">Supprimer</a>
+                                                    </div>
+                                                </span>
+                                            </td>
                                         </tr>
                                     {% endfor %}
                                     </tbody>
