--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -1,17 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    <div class="content pb-0">
+    <!-- breadcrumbs -->
+    <div class="breadcrumbs">
+        <div class="breadcrumbs-inner">
+            <div class="row m-0">
+                <div class="col-sm-12">
+                    <div class="page-header float-left">
+                        <div class="page-title">
+                            <ol class="breadcrumb text-left">
+                                <li><a href="{{ path('all_users') }}">Utilisateurs</a></li>
+                                <li class="active">{{ title }}</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end breadcrumbs -->
 
+    <div class="content pb-0">
 
         <div class="clearfix"></div>
         <div class="orders">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="card">
-                        <div class="card-body">
-                            <h4 class="box-title">{{ title }} </h4>
-                        </div>
                         <div class="card-body card-block">
                             {{ form_start(formUser) }}
                             {#{{ form_widget(formUser) }}#}
